// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Result Display tests Render result for completed results 1`] = `ReactWrapper {}`;

exports[`Result Display tests Render result for error result 1`] = `
<div
  className="callout alert"
>
  <div
    className="grid-x display"
  >
    <div
      className="cell small-6 medium-4 large-4"
    >
      <a
        href="https://www.error.com/job/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <h4
          className="sc-bdVaJa jAtYUa"
        >
          Error.com
        </h4>
      </a>
    </div>
    <div
      className="cell result-message small-6 medium-6 large-4"
    >
      Error: Problem accessing page
    </div>
  </div>
</div>
`;

exports[`Result Display tests Render result for good results, archive one of them 1`] = `ReactWrapper {}`;

exports[`Result Display tests Render result for good results, ignore one 1`] = `ReactWrapper {}`;

exports[`Result Display tests Render result for good results, watch one 1`] = `ReactWrapper {}`;

exports[`Result Display tests Render result for pending result 1`] = `
<div
  className="callout"
>
  <div
    className="grid-x display"
  >
    <div
      className="cell small-6 medium-4 large-4"
    >
      <a
        href="https://www.example.io/job/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <h4
          className="sc-bdVaJa jAtYUa"
        >
          Example.io
        </h4>
      </a>
    </div>
    <div
      className="cell result-message small-6 medium-6 large-4"
    >
      Pending Lookup
    </div>
  </div>
</div>
`;
